--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,5 @@
 <ul>
     <li><a href="index.html">Informations</a></li>
-    <li><a href="film.html">Vidéos</a></li>
+    <li><a href="film.html">Films</a></li>
     <li><a href="serie.html">Séries</a></li>
 </ul>
