--- a/film.html
+++ b/film.html
@@ -78,21 +78,24 @@
             background-color: rgba(0,0,0,0.4);
         }
         #modal-content {
-            background-color: #000000;
-            margin: 15% auto;
-            padding: 10px;
-            border: 1px solid #888;
-            width: 50%;
-            height: auto;
-            max-height: 90vh;
-            border-radius: 10px;
-            box-shadow: 10px 10px 5px grey;
-            overflow: hidden;
-        }
-        #videoPlayer {
-            width: 100%;
-            height: 80%;
-        }
+        background-color: #000000;
+        margin: 10% auto;
+        padding: 10px;
+        border: 1px solid #888;
+        width: 80%; /* Largeur du modal à 80% de la largeur de la fenêtre */
+        height: auto; /* Hauteur automatique */
+        max-height: 70vh; /* Hauteur maximale de 70% de la hauteur de la fenêtre */
+        border-radius: 10px;
+        box-shadow: 10px 10px 5px grey;
+        overflow: hidden;
+        position: relative; /* Position relative pour référencer les enfants */
+    }
+
+#videoPlayer {
+    width: 100%; /* La vidéo prend toute la largeur du conteneur modal */
+    height: calc(100% - 40px); /* Hauteur ajustée en fonction du conteneur modal */
+}
+
         #close {
             color: #aaa;
             float: right;
@@ -345,26 +348,20 @@
           });
 
         function createOnClickHandler(url) {
-        return function() {
-        var modalContent = document.getElementById('modal-content');
-        var oldVideoPlayer = document.getElementById('videoPlayer');
-        if (oldVideoPlayer) {
-        modalContent.removeChild(oldVideoPlayer); // Supprime l'ancienne iframe
-       }
-    var videoPlayer = document.createElement('iframe'); // Crée une nouvelle iframe
-    videoPlayer.id = 'videoPlayer';
-    videoPlayer.src = url;
-    videoPlayer.allowFullscreen = true;
-
-    // Appliquer des styles pour définir la taille de l'iframe
-    videoPlayer.style.width = '80%'; // Largeur de 80% de la fenêtre modale
-    videoPlayer.style.height = '80%'; // Hauteur de 80% de la fenêtre modale
-
-    modalContent.appendChild(videoPlayer); // Ajoute l'iframe à la fenêtre modale
-    document.getElementById('modal').style.display = "block";
-  };
-}
-
+          return function() {
+            var modalContent = document.getElementById('modal-content');
+            var oldVideoPlayer = document.getElementById('videoPlayer');
+            if (oldVideoPlayer) {
+              modalContent.removeChild(oldVideoPlayer); // Supprime l'ancienne iframe
+            }
+            var videoPlayer = document.createElement('iframe'); // Crée une nouvelle iframe
+            videoPlayer.id = 'videoPlayer';
+            videoPlayer.src = url;
+            videoPlayer.allowFullscreen = true;
+            modalContent.appendChild(videoPlayer); // Ajoute l'iframe à la fenêtre modale
+            document.getElementById('modal').style.display = "block";
+          };
+        }
 
         // Fermer la fenêtre modale lorsque l'utilisateur clique sur (x)
         document.getElementById('close').onclick = function() {
