--- a/film.html
+++ b/film.html
@@ -82,14 +82,15 @@
         margin: 10% auto;
         padding: 10px;
         border: 1px solid #888;
-        width: 80%; /* Largeur du modal à 80% de la largeur de la fenêtre */
-        height: auto; /* Hauteur automatique */
-        max-height: 70vh; /* Hauteur maximale de 70% de la hauteur de la fenêtre */
+        width: 50%; /* Réduire la largeur du modal à 50% */
+        height: 60%; /* Augmenter la hauteur du modal à 60% */
+        max-height: 70vh; /* Limiter la hauteur maximale à 70% de la hauteur de la fenêtre */
         border-radius: 10px;
         box-shadow: 10px 10px 5px grey;
         overflow: hidden;
-        position: relative; /* Position relative pour référencer les enfants */
+        position: relative;
     }
+
 
 #videoPlayer {
     width: 100%; /* La vidéo prend toute la largeur du conteneur modal */
